--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>My Portofolio | Christian Nathaniel</title>
 </head>
 
 <body id="home">
@@ -40,10 +41,10 @@
         </div>
     </nav>
     <!-- jumbotron -->
-    <section class="jumbotron text-center bg-success-200">
-        <img src="asset/1DSC02231-removebg.png" class="rounded-circle img-thumbnail" width="200">
+    <section class="jumbotron text-center">
+        <img src="asset/IMG_20231202_064019.jpg" class="rounded-circle img-thumbnail" width="200">
         <h1 class="display-4 ">Christian</h1>
-        <p>Student | Calon Web Developer</p>
+        <p class="lead"></p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#fff" fill-opacity="1"
                 d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,272C672,277,768,267,864,234.7C960,203,1056,149,1152,144C1248,139,1344,181,1392,202.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
@@ -61,11 +62,11 @@
             </div>
 
             <div class="row justify-content-center fs-6 text-center">
-                <div class="col-md-4">
+                <div class="col-md-4" data-aos="fade-right">
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis excepturi ex deserunt
                         accusamus aliquam sequi veniam. Repudiandae odio voluptatem dolorem!</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4" data-aos="fade-left" data-aos-delay="200">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quod beatae tempore ipsum
                         corrupti sit, cupiditate maxime cumque cum quia.</p>
                 </div>
@@ -88,7 +89,7 @@
 
             <!-- Gambar 1 -->
             <div class=" galery row justify-content-center">
-                <div class="col-md-4 mb-3 ">
+                <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration="500">
 
                     <div class="card">
                         <img src="asset/2023-11-25-21-10-26.gif" class="card-img-top" alt="...">
@@ -101,7 +102,7 @@
                 </div>
 
                 <!-- Gambar 2 -->
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
 
                     <div class="card">
                         <img src="asset/IMG_20231105_172648.png" class="card-img-top" alt="...">
@@ -116,7 +117,7 @@
                 </div>
 
                 <!-- Gambar 3 -->
-                <div class="col-md-4 mb-3 ">
+                <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
 
                     <div class="card">
                         <img src="asset/Media_220926_051404.gif" class="card-img-top" alt="...">
@@ -137,6 +138,52 @@
                 d="M0,320L48,314.7C96,309,192,299,288,293.3C384,288,480,288,576,288C672,288,768,288,864,261.3C960,235,1056,181,1152,170.7C1248,160,1344,192,1392,208L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
         </svg>
+    </section>
+    <!-- Galery -->
+    <section id="gallery">
+        <div class="container">
+            <div class="row text-center mb-3">
+                <div class="col">
+                    <h2>Gallery</h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-3">
+                    <a href="">
+                        <img src="asset/img/images_(5)-transformed.jpeg" class="img-fluid gallery-img" alt="Gambar 1">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="">
+                        <img src="asset/img/IMG_20231202_070025.jpg" class="img-fluid gallery-img" alt="Gambar 2">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="">
+                        <img src="asset/img/IMG_20231202_070042.png" class="img-fluid gallery-img" alt="Gambar 3">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="">
+                        <img src="asset/img/IMG_20231202_070446-transformed.jpeg" class="img-fluid gallery-img"
+                            alt="Gambar 4">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="">
+                        <img src="asset/img/IMG_20231202_070456-transformed.jpeg" class="img-fluid gallery-img"
+                            alt="Gambar 5">
+                    </a>
+                </div>
+                <div class="col-md-3">
+                    <a href="">
+                        <img src="asset/img/IMG_20231202_070634-transformed.jpeg" class="img-fluid gallery-img"
+                            alt="Gambar 6">
+                    </a>
+                </div>
+
+            </div>
+        </div>
     </section>
     <!-- contact -->
     <section id="contact">
@@ -201,6 +248,31 @@
     <footer class="text-white text-center pb-5">
         <p>Created by <a class="text-white fw-bold" href="">Christian Nathaniel</a></p>
     </footer>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        const galleryImage = document.querySelectorAll('.gallery-img');
+        galleryImage.forEach((img, i) => {
+            img.dataset.aos = 'fade-down';
+            img.dataset.aosDelay = i * 100;
+            img.dataset.aosDuration = 1000;
+
+        })
+        AOS.init({
+            once: true,
+            duration: 2000,
+        });
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/TextPlugin.min.js"></script>
+    <script>
+        gsap.registerPlugin(TextPlugin);
+        gsap.to('.lead', { duration: 2, delay: 1.5, text: 'Student | Calon Web Developer' })
+        gsap.from('.jumbotron img', { duration: 1, rotateY: 360, opacity: 0 });
+        gsap.from('.navbar', { duration: 1.5, y: '-100%', opacity: 0, ease: 'bounce' });
+        gsap.from('.display-4', { duration: 1, x: 50, opacity: 0, delay: 0.5, ease: 'back' });
+
+
+    </script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbxmkHxLunL9bTSW2MNOkY5H8iE-tRJ63pABVIdozT9CFumoQzaQItaUquaBw6rXajMS/exec'
         const form = document.forms['chris-contact-form']
