--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <!-- Gambar 1 -->
             <div class=" galery row justify-content-center">
-                <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration="500">
+                <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration="1000">
 
                     <div class="card">
                         <img src="asset/2023-11-25-21-10-26.gif" class="card-img-top" alt="...">
@@ -102,7 +102,7 @@
                 </div>
 
                 <!-- Gambar 2 -->
-                <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
+                <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="100">
 
                     <div class="card">
                         <img src="asset/IMG_20231105_172648.png" class="card-img-top" alt="...">
@@ -117,7 +117,7 @@
                 </div>
 
                 <!-- Gambar 3 -->
-                <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
+                <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="200">
 
                     <div class="card">
                         <img src="asset/Media_220926_051404.gif" class="card-img-top" alt="...">
@@ -184,6 +184,55 @@
 
             </div>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#5f9ea0" fill-opacity="1"
+                d="M0,224L48,224C96,224,192,224,288,234.7C384,245,480,267,576,256C672,245,768,203,864,192C960,181,1056,203,1152,218.7C1248,235,1344,245,1392,250.7L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+        </svg>
+    </section>
+
+    <section id="my-keyboards">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col text-light">
+                    <h2>My Keyboards</h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="keyboard-box">
+                            <h4 class="keyboard-name">
+                                Keychron K2
+                            </h4>
+                            <img class="keyboard-img" src="asset/keyboard/3 - Copy.png" alt="">
+                            <a href="" class="btn btn-light keyboard-detail-button">Show details</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="keyboard-box">
+                            <h4 class="keyboard-name">
+                                Womier RGB
+                            </h4>
+                            <img class="keyboard-img" src="asset/keyboard/2 - Copy.png" alt="">
+                            <a href="" class="btn btn-light keyboard-detail-button">Show details</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mb-3">
+                        <div class="keyboard-box">
+                            <h4 class="keyboard-name">
+                                Red Dragon
+                            </h4>
+                            <img class="keyboard-img" src="asset/keyboard/1 - Copy.png" alt="">
+                            <a href="" class="btn btn-light keyboard-detail-button">Show details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#fff" fill-opacity="1"
+                d="M0,160L48,181.3C96,203,192,245,288,218.7C384,192,480,96,576,58.7C672,21,768,43,864,90.7C960,139,1056,213,1152,245.3C1248,277,1344,267,1392,261.3L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+        </svg>
     </section>
     <!-- contact -->
     <section id="contact">
@@ -296,6 +345,15 @@
                 })
                 .catch(error => console.error('Error!', error.message))
         })
+    </script>
+    <script type="text/javascript" src="js/vanilla-tilt.min.js"></script>
+    <script type="text/javascript">
+        VanillaTilt.init(document.querySelectorAll(".keyboard-box"), {
+            max: 35,
+            speed: 400,
+            scale: 1.1,
+            glare: true,
+        });
     </script>
 </body>
 
